fix(plan_7): enforce true DTO immutability with List.copyOf, real HTTP status, safe errexit, and trap restore
- AdminRagResponse: replace Collections.unmodifiableList view with List.copyOf
  in compact constructor; drop custom accessor. Add unit test proving
  modifying original list does not affect DTO.
- query_deepseek_acceptance_test.sh: use curl -w to extract real HTTP
  status instead of faking 200 from JSON parse. Wrap target-source Python
  output in if/else to safely capture exit code under set -e. Add trap
  on EXIT to guarantee Stub restore on any exit path.

Co-Authored-By: Claude <noreply@anthropic.com>